<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:isScrollContainer="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:layout_gravity="top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:text="@string/sing_in"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="30sp"
                    >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_name"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_name"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_surname"
                    android:layout_marginVertical="5dp"/>

                <EditText
                    android:id="@+id/surname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_surname"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_middlename"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/middlename_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_middlename"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_phone"
                    android:layout_marginVertical="5dp"/>

                <EditText
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_phone"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_city"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_city"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_email"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:hint="@string/insert_email"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_password"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:hint="@string/insert_password"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_bold"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/set_dob"
                    android:layout_marginVertical="5dp"
                    />

                <EditText
                    android:id="@+id/dob_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/insert_dob"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo_2_bold"
                        android:textSize="24sp"
                        android:text="@string/set_sex"
                        android:layout_marginVertical="5dp"/>

                    <RadioGroup
                        android:id="@+id/gender_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/male_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />

                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/sing_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_in"
                    android:layout_gravity="center"
                    android:layout_marginVertical="5dp"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>